# microfoon

./: .env.example  .gitignore  Impdoc.md  README.md  devdoc.md  microfoon.db  pyproject.toml
20260227 backup time settings mic/: timeset.txt
microfoon/: audio.py  config.py  database.py  exporter.py  intelligence.py  main.py
prompts/: cleanup.txt  title.txt
scripts/: check_consistency.py  cleanup_db.py  inspect_rec026.py  regenerate_exports.py  repair_db_paths.py  reprocess_all.py  reprocess_failed.py  reprocess_transcripts.py  verify_db_update.py
